style css page 404

--- a/404.html
+++ b/404.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page non trouvée - Erreur 404</title>
+    <link rel="stylesheet" href="src/css/style.css" />
 </head>
 <body>
-    <h1>404 - Page non trouvée</h1>
-    <p>Désolé, la page que vous recherchez est introuvable. Retournez à l'accueil.</p>
-    <a  href="/index.html"
-       > Accueil </a>
-
+    <section class="section__marrons"> 
+    <h1 class="titre">404 - Page non trouvée</h1>
+</section>
+    <p class="text-erreur">Désolé, la page que vous recherchez est introuvable. Retournez à l'accueil.</p>
+    <a href="/index.html"
+    class="Btn-billetterie"   
+    > Accueil </a>
+    
 </body>
 </html>
