ajout d'un lien sur le titre d'un batiment

--- a/maison.html
+++ b/maison.html
@@ -44,7 +44,7 @@
     </header>
 <main>
     <section class="section">
-        <h2 class="Batiment__Titre"> <strong>Crescent House</strong></h2>
+        <a  href="https://shigerubanarchitects.com/works/hh/crescent-house/" class="Batiment__Titre"> <strong>Crescent House</strong></a>
         <article>
             <img class="Batiment__img"  class="Batiment__img" src="/public/img/maison/maison.webp" alt="Vue extérieur de la Crescent House">
             <p class="légende"><em>extérieur de la Crescent House</em></p>
