lien externe vers cardboard cathedral

--- a/cathedral.html
+++ b/cathedral.html
@@ -44,7 +44,7 @@
     </header>
 <main>
     <section class="section">
-        <h2 class="Batiment__Titre"> <strong>Cardboard Cathedral</strong></h2>
+        <a  href="https://shigerubanarchitects.com/works/cultural/cardboard-cathedral/" class="Batiment__Titre"> <strong>Cardboard Cathedral</strong></a>
         <article>
             <img class="Batiment__img"  class="Batiment__img" src="/public/img/eglise/eglise.webp" alt="Vue intérieur de la Cardboard Cathedral">
             <p class="légende"> <em>Vue intérieur de la Cardboard Cathedral</em></p>
