ajout des liens externe sur plusieur page en reprenant l'exemple de celui d'avant

--- a/Ponpidou.html
+++ b/Ponpidou.html
@@ -44,7 +44,7 @@
     </header>
 <main>
     <section class="section">
-        <h2 class="Batiment__Titre"> <strong>Centre Ponpidou Metz</strong></h2>
+        <a  href="https://shigerubanarchitects.com/works/cultural/centre-pompidou-metz/" class="Batiment__Titre"> <strong> Centre Ponpidou Metz</strong></a>
         <article>
             <img class="Batiment__img"  class="Batiment__img" src="/public/img/Ponpidou/ponpidou1.webp" alt="Vue extérieur du  centre Ponpidou">
             <p class="légende"><em>Vue extérieur du  centre Ponpidou</em></p>
