--- a/maroc.html
+++ b/maroc.html
@@ -44,7 +44,7 @@
     </header>
 <main>
     <section class="section">
-        <h2 class="Batiment__Titre   Batiment__Titre__Maroc"> <strong>Temporary housing in Marrakesh</strong></h2>
+        <a  href="https://shigerubanarchitects.com/news/disaster-relief-projects/temporary-housing-in-marrakesh/" class="Batiment__Titre"> <strong> Temporary Housing in Marrakesh</strong></a>
         <article>
             <img class="Batiment__img"  class="Batiment__img" src="/public/img/Maroc/maroc.webp" alt="Vue intérieur des maison temporaire">
             <p class="légende"><em>Vue intérieur des maison temporaire</em></p>
