--- a/népal.html
+++ b/népal.html
@@ -44,7 +44,7 @@
     </header>
 <main>
     <section class="section">
-        <h2 class="Batiment__Titre"> <strong>Khumjung secondary school </strong></h2>
+        <a  href="https://shigerubanarchitects.com/works/timber-and-bamboo/khumjung-secondary-school/" class="Batiment__Titre"> <strong> Khumjung secondary school</strong></a>
         <article>
             <img class="Batiment__img"  class="Batiment__img" src="/public/img/nepal/nepal1.webp" alt="image de l'inoguration de l'école">
             <p class="légende"><em>image de l'inoguration de l'école</em></p>
