--- a/shigeru-Ban.html
+++ b/shigeru-Ban.html
@@ -64,7 +64,7 @@
             <h3 class="Ban__intertitre">Un Voyage à Travers les Réalisations Majeures</h3>
             <p classe="Ban__texet">L'exposition ne manquera pas de mettre en avant les réalisations majeures de Shigeru Ban à travers le monde. Des bâtiments emblématiques aux ponts innovants, chaque projet sera présenté de manière immersive, offrant aux visiteurs une expérience visuelle et informative. Des installations interactives et des projections audiovisuelles donneront vie aux projets de l'architecte, permettant aux visiteurs de plonger au cœur de son processus créatif.</p>
         </article>
-        <a href="https://shigerubanarchitects.com/" class="Btn-billetterie">En savoir plus</a>
+        <a href="https://fr.wikipedia.org/wiki/Shigeru_Ban" class="Btn-billetterie">En savoir plus</a>
     </section>
 </main>
 <footer class="footer">
