--- a/suiden.html
+++ b/suiden.html
@@ -44,7 +44,7 @@
     </header>
 <main>
     <section class="section">
-        <h2 class="Batiment__Titre Batiment__Titre__Maroc"> <strong>Shonai hotel Suiden terrasse spa</strong></h2>
+        <a  href="https://shigerubanarchitects.com/works/cultural/shonai-hotel-suiden-terrasse-spa/" class="Batiment__Titre"> <strong>Shonai hotel Suiden terrasse spa </strong></a>
         <article>
             <img class="Batiment__img"  class="Batiment__img" src="/public/img/suiden/suiden1.webp" alt="Vue extérieur du spa">
             <p class="légende"><em>Vue extérieur du spa</em></p>
