--- a/hotel.html
+++ b/hotel.html
@@ -44,7 +44,7 @@
     </header>
 <main>
     <section class="section">
-        <h2 class="Batiment__Titre"> <strong>ZEN Wellness SEINEI</strong></h2>
+        <a  href="https://shigerubanarchitects.com/works/cultural/zen-wellness-seinei/" class="Batiment__Titre"> <strong> ZEN Wellness SEINEI</strong></a>
         <article>
             <img class="Batiment__img"  class="Batiment__img" src="/public/img/hotel/hotel.webp" alt="Vue globale de l'hotel ">
             <p class="légende"><em>Vue globale de l'hotel</em> </p>
