--- a/simose.html
+++ b/simose.html
@@ -44,7 +44,7 @@
     </header>
 <main>
     <section class="section">
-        <h2 class="Batiment__Titre"> <strong>Simose</strong></h2>
+        <a  href="https://shigerubanarchitects.com/works/cultural/simose/" class="Batiment__Titre"> <strong> Simose</strong></a>
         <article>
             <img class="Batiment__img"  class="Batiment__img" src="/public/img/simose/simose.webp" alt="Vue intérieur du musée">
             <p class="légende">Vue intérieur du musée</p>
