--- a/fr/index.html
+++ b/fr/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/index.html">
+        <a href="/fr/index.html">
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
         </a>
         <a class="dropbtn">
@@ -35,10 +35,10 @@
         class="header_menuBtn"
     >
           <ul class="menu-list">
-            <li><a href="/infos.html" class="menu_texte">Infos</a></li>
-            <li><a href="/billetterie.html" class="menu_texte">Billetterie</a></li>
-            <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
-            <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
+            <li><a href="/fr/infos.html" class="menu_texte">Infos</a></li>
+            <li><a href="/fr/billetterie.html" class="menu_texte">Billetterie</a></li>
+            <li><a href="/fr/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
+            <li><a href="/fr/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
           </ul>
         </nav>
         <h1> Expositions </h1>
@@ -53,12 +53,12 @@
         <img src="/public/img/accueil/accueil-2.webp" alt="Fondation Cartier" class="img-section1">
         <p class="texte-marrons">Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
         <h3 class="intertitre-marrons"> Du 13 avril au 23 juin 2024</h3>
-        <a href="/infos.html" class="Btn-infos">Tout les jours</a> 
+        <a href="/fr/infos.html" class="Btn-infos">Tout les jours</a> 
     </section>
     <section class="section section__marrons">
         <h3 class="architecte-intertitre">Pour présenter un Architecte mondialement connu</h3>
         <img src="/public/img/accueil/accueil-3.webp" alt="Image de Shigeru Ban" class="architecte-img">
-        <a href="/shigeru-Ban.html" class="Btn-architecte">Shigeru Ban</a>        
+        <a href="/fr/shigeru-Ban.html" class="Btn-architecte">Shigeru Ban</a>        
     </section>
     <section>
         <article>
@@ -142,7 +142,7 @@
         <article class="billetterie-acceuil">
             <h3 class="billetterie__titre" >Vous voulez en savoir plus sur comment cet arcitecte révolutionne le monde ? </h3>
             <p class="billetterie__texte">L’exposition est ouverte tout le jours du 13 Avril au 23 Juin 2024</p>
-            <button  href="/billetterie.html" class="Btn-billetterie"> BILLETTERIE </button>
+            <button  href="/fr/billetterie.html" class="Btn-billetterie"> BILLETTERIE </button>
             <br>
             <cite class="citation">Cette exposition sur Shigeru Ban offre une plongée unique dans l'innovation architecturale et la durabilité. Découvrez comment chaque structure raconte une histoire captivante où créativité et responsabilité environnementale convergent.</cite>
         </article>
@@ -171,7 +171,7 @@
         <p class="footer__texte">Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
         <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR" class="footer__facebook"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
         <a href="https://www.instagram.com/fondationcartier/?hl=fr" class="footer__instagram"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
-        <a href="/index.html" class="footer__logo"><img src="/public/icon/logo-footer.svg" alt="Logo exposition Shigeru Ban"></a>
+        <a href="/fr/index.html" class="footer__logo"><img src="/public/icon/logo-footer.svg" alt="Logo exposition Shigeru Ban"></a>
     </footer>
 </body>
 </html>
