correction de liens page infos et billetterie

--- a/fr/billetterie.html
+++ b/fr/billetterie.html
@@ -35,10 +35,10 @@
         class="header_menuBtn"
     >
           <ul class="menu-list">
-            <li><a href="/infos.html" class="menu_texte">Infos</a></li>
-            <li><a href="/billetterie.html" class="menu_texte">Billetterie</a></li>
-            <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
-            <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
+            <li><a href="/fr/infos.html" class="menu_texte">Infos</a></li>
+            <li><a href="/fr/billetterie.html" class="menu_texte">Billetterie</a></li>
+            <li><a href="/fr/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
+            <li><a href="/fr/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
           </ul>
         </nav>
         </div>
