--- a/fr/infos.html
+++ b/fr/infos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L'art de Shigeru Ban</title>
-    <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="../src/css/style.css" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body>
@@ -35,10 +35,10 @@
     class="header_menuBtn"
 >
       <ul class="menu-list">
-        <li><a href="/infos.html" class="menu_texte">Infos</a></li>
-        <li><a href="/billetterie.html" class="menu_texte">Billetterie</a></li>
-        <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
-        <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
+        <li><a href="/fr/infos.html" class="menu_texte">Infos</a></li>
+        <li><a href="/fr/billetterie.html" class="menu_texte">Billetterie</a></li>
+        <li><a href="/fr/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
+        <li><a href="/fr/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
       </ul>
     </nav>
 </header>
