lien page Oeuvre et footer d'autre page

--- a/fr/Oeuvres.html
+++ b/fr/Oeuvres.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L'art de Shigeru Ban</title>
-    <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="../src/css/style.css" />
     <script src="//unpkg.com/alpinejs" defer></script>
     <script defer="" src="https://unpkg.com/alpinejs@3.4.2/dist/cdn.min.js"></script>
 </head>
@@ -36,10 +36,10 @@
         class="header_menuBtn"
     >
           <ul class="menu-list">
-            <li><a href="/infos.html" class="menu_texte">Infos</a></li>
-            <li><a href="/billetterie.html" class="menu_texte">Billetterie</a></li>
-            <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
-            <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
+            <li><a href="/fr/infos.html" class="menu_texte">Infos</a></li>
+            <li><a href="/fr/billetterie.html" class="menu_texte">Billetterie</a></li>
+            <li><a href="/fr/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
+            <li><a href="/fr/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
           </ul>
         </nav>
     </header>
@@ -52,78 +52,78 @@
             <div class="arrow"></div>
         <article class="Oeuvres">
             <h3 class="Oeuvres__dates">2008</h3>
-            <a href="/maison.html"><img src="/public/img/Oeuvres/oeuvres5.webp" alt="Crescent House" class="Oeuvres__img"></a>
-            <a href="/maison.html" class="Oeuvres__nom">Crescent House</a>
+            <a href="/fr/maison.html"><img src="/public/img/Oeuvres/oeuvres5.webp" alt="Crescent House" class="Oeuvres__img"></a>
+            <a href="/fr/maison.html" class="Oeuvres__nom">Crescent House</a>
         </article> 
         <article class="Oeuvres">
             <h3 class="Oeuvres__dates">2010</h3>
-            <a href="/Ponpidou.html"><img src="/public/img/Oeuvres/oeuvres4.webp" alt="Centre Ponpidou Metz" class="Oeuvres__img"></a>
-            <a href="/Ponpidou.html" class="Oeuvres__nom  ">Centre Ponpidou Metz</a>
+            <a href="/fr/Ponpidou.html"><img src="/public/img/Oeuvres/oeuvres4.webp" alt="Centre Ponpidou Metz" class="Oeuvres__img"></a>
+            <a href="/fr/Ponpidou.html" class="Oeuvres__nom  ">Centre Ponpidou Metz</a>
         </article>
         <article class="Oeuvres">
             <h3 class="Oeuvres__dates">2013</h3>
-            <a href="/cathedral.html"><img src="/public/img/Oeuvres/oeuvres1.webp" alt="Cardboard Cathedral" class="Oeuvres__img"></a>
-            <a href="/cathedral.html" class="Oeuvres__nom  ">Cardboard Cathedral</a>
+            <a href="/fr/cathedral.html"><img src="/public/img/Oeuvres/oeuvres1.webp" alt="Cardboard Cathedral" class="Oeuvres__img"></a>
+            <a href="/fr/cathedral.html" class="Oeuvres__nom  ">Cardboard Cathedral</a>
         </article>
         <article class="Oeuvres">
             <h3 class="Oeuvres__dates">2017</h3>
-            <a href="/népal.html"><img src="/public/img/Oeuvres/oeuvres7.webp" alt="Khumjung secondary school " class="Oeuvres__img"></a>
-            <a href="/népal.html" class="Oeuvres__nom ">Khumjung secondary school </a>
+            <a href="/fr/népal.html"><img src="/public/img/Oeuvres/oeuvres7.webp" alt="Khumjung secondary school " class="Oeuvres__img"></a>
+            <a href="/fr/népal.html" class="Oeuvres__nom ">Khumjung secondary school </a>
         </article>
         <article class="Oeuvres">
             <h3 class="Oeuvres__dates">2021</h3>
-            <a href="/suiden.html"><img src="/public/img/Oeuvres/oeuvres8.webp" alt="Shonai hotel Suiden terrasse spa " class="Oeuvres__img"></a>
-            <a href="/suiden.html" class="Oeuvres__nom ">Shonai hotel Suiden terrasse spa</a>
+            <a href="/fr/suiden.html"><img src="/public/img/Oeuvres/oeuvres8.webp" alt="Shonai hotel Suiden terrasse spa " class="Oeuvres__img"></a>
+            <a href="/fr/suiden.html" class="Oeuvres__nom ">Shonai hotel Suiden terrasse spa</a>
         </article>
         <article class="Oeuvres">
             <h3 class="Oeuvres__dates">2022</h3>
-            <a href="/hotel.html"><img src="/public/img/Oeuvres/oeuvres6.webp" alt="ZEN Wellness SEINEI" class="Oeuvres__img"></a>
-            <a href="/hotel.html" class="Oeuvres__nom  ">ZEN Wellness SEINEI</a>
+            <a href="/fr/hotel.html"><img src="/public/img/Oeuvres/oeuvres6.webp" alt="ZEN Wellness SEINEI" class="Oeuvres__img"></a>
+            <a href="/fr/hotel.html" class="Oeuvres__nom  ">ZEN Wellness SEINEI</a>
         </article>
         <article class="Oeuvres">
             <h3 class="Oeuvres__dates">2023</h3>
-            <a href="/maroc.html"><img src="/public/img/Oeuvres/oeuvres2.webp" alt="Temporary housing in Marrakesh" class="Oeuvres__img"></a>
-            <a href="/maroc.html" class="Oeuvres__nom ">Temporary housing in Marrakesh</a>
+            <a href="/fr/maroc.html"><img src="/public/img/Oeuvres/oeuvres2.webp" alt="Temporary housing in Marrakesh" class="Oeuvres__img"></a>
+            <a href="/fr/maroc.html" class="Oeuvres__nom ">Temporary housing in Marrakesh</a>
         </article>
         <article class="Oeuvres">
             <h3 class="Oeuvres__dates">2023</h3>
-            <a href="/simose.html"><img src="/public/img/Oeuvres/oeuvres3.webp" alt="Simose" class="Oeuvres__img"></a>
-            <a href="/simose.html" class="Oeuvres__nom">Simose</a>
+            <a href="/fr/simose.html"><img src="/public/img/Oeuvres/oeuvres3.webp" alt="Simose" class="Oeuvres__img"></a>
+            <a href="/fr/simose.html" class="Oeuvres__nom">Simose</a>
         </article>
         </div>
     </section>
     
     <section class="galerie" 
     x-data="{
-        imageUrl:'public/img/Oeuvres/galerie/max/historical-museum-max.jpg'
+        imageUrl:'/public/img/Oeuvres/galerie/max/historical-museum-max.jpg'
     }" >
         <h2 class="galerie__titre">Galerie</h2>
     <p class="galerie__texte">Les plus belle œuvres de Shigeru Ban qui ont été réalisé pour des concours. </p>
     <img 
     class="img"
     src="/public/img/Oeuvres/galerie/mini/historical-museum-mini.jpg" alt="historical-museum"
-            @click="imageUrl= 'public/img/Oeuvres/galerie/max/historical-museum-max.jpg'"
+            @click="imageUrl= '/public/img/Oeuvres/galerie/max/historical-museum-max.jpg'"
             >
     <img 
     class="img"
     src="/public/img/Oeuvres/galerie/mini/toyama-mini.jpg" alt="Toyama"
-            @click="imageUrl= 'public/img/Oeuvres/galerie/max/toyama-max.jpg'">
+            @click="imageUrl= '/public/img/Oeuvres/galerie/max/toyama-max.jpg'">
     <img 
     class="img"
     src="/public/img/Oeuvres/galerie/mini/théatre-mini.jpg" alt="théatre"
-            @click="imageUrl= 'public/img/Oeuvres/galerie/max/théatre-max.jpg'">
+            @click="imageUrl= '/public/img/Oeuvres/galerie/max/théatre-max.jpg'">
     <img
     class="img"
     src="/public/img/Oeuvres/galerie/mini/funeraire-mini.jpg" alt="funeraire"
-            @click="imageUrl= 'public/img/Oeuvres/galerie/max/funeraire-max.jpg'">
+            @click="imageUrl= '/public/img/Oeuvres/galerie/max/funeraire-max.jpg'">
     <img
     class="img"
     src="/public/img/Oeuvres/galerie/mini/palais-mini.jpg" alt="palais"
-            @click="imageUrl= 'public/img/Oeuvres/galerie/max/palais-max.jpg'">
+            @click="imageUrl= '/public/img/Oeuvres/galerie/max/palais-max.jpg'">
     <img 
     class="img"
     src="/public/img/Oeuvres/galerie/mini/airport-mini.jpg" alt="airport"
-            @click="imageUrl= 'public/img/Oeuvres/galerie/max/airport-max.jpg'">
+            @click="imageUrl= '/public/img/Oeuvres/galerie/max/airport-max.jpg'">
     
     <div class="overlay"
         x-show="imageUrl"
@@ -139,7 +139,7 @@
     <p class="footer__texte">Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
     <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR" class="footer__facebook"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
     <a href="https://www.instagram.com/fondationcartier/?hl=fr" class="footer__instagram"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
-    <a href="/index.html" class="footer__logo"><img src="/public/icon/logo-footer.svg" alt="Logo exposition Shigeru Ban"></a>
+    <a href="/fr/index.html" class="footer__logo"><img src="/public/icon/logo-footer.svg" alt="Logo exposition Shigeru Ban"></a>
 </footer>
 </body>
 </html>
