--- a/fr/shigeru-Ban.html
+++ b/fr/shigeru-Ban.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L'art de Shigeru Ban</title>
-    <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="../src/css/style.css" />
     <script defer="" src="https://unpkg.com/alpinejs@3.4.2/dist/cdn.min.js"></script>
 </head>
 <body>
@@ -35,10 +35,10 @@
         class="header_menuBtn"
     >
           <ul class="menu-list">
-            <li><a href="/infos.html" class="menu_texte">Infos</a></li>
-            <li><a href="/billetterie.html" class="menu_texte">Billetterie</a></li>
-            <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
-            <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
+            <li><a href="/fr/infos.html" class="menu_texte">Infos</a></li>
+            <li><a href="/fr/billetterie.html" class="menu_texte">Billetterie</a></li>
+            <li><a href="/fr/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
+            <li><a href="/fr/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
           </ul>
         </nav>
     </header>
@@ -71,7 +71,7 @@
     <p class="footer__texte">Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
     <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR" class="footer__facebook"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
     <a href="https://www.instagram.com/fondationcartier/?hl=fr" class="footer__instagram"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
-    <a href="/index.html" class="footer__logo"><img src="/public/icon/logo-footer.svg" alt="Logo exposition Shigeru Ban"></a>
+    <a href="/fr/index.html" class="footer__logo"><img src="/public/icon/logo-footer.svg" alt="Logo exposition Shigeru Ban"></a>
 </footer>
 </body>
 </html>
