liens cathédral et header

--- a/fr/shigeru-Ban.html
+++ b/fr/shigeru-Ban.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/index.html">
+        <a href="/fr/index.html">
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
         </a>
         <a class="dropbtn">
