lien pour les pages français

--- a/fr/hotel.html
+++ b/fr/hotel.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L'art de Shigeru Ban</title>
-    <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="../src/css/style.css" />
     <script defer="" src="https://unpkg.com/alpinejs@3.4.2/dist/cdn.min.js"></script>
 </head>
 <body>
     <header class="header">
-        <a href="/index.html">
+        <a href="/fr/index.html">
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
         </a>
         <a class="dropbtn">
@@ -26,7 +26,7 @@
           class="menu"
         >
 
-        <a href="/index.html"  >
+        <a href="/fr/index.html"  >
             <img src="/public/icon/logo-footer.svg" alt="Logo Shigeru Ban" class="logo-menu">
         </a>
 
@@ -66,14 +66,14 @@
         </article>
     </section> 
     <section class="section__marrons">
-        <a href="/Oeuvres.html" class="Batiment__retour">Retour vers les Oeuvres </a>
+        <a href="/fr/Oeuvres.html" class="Batiment__retour">Retour vers les Oeuvres </a>
     </section> 
 </main> 
 <footer class="footer">
     <p class="footer__texte">Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
     <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR" class="footer__facebook"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
     <a href="https://www.instagram.com/fondationcartier/?hl=fr" class="footer__instagram"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
-    <a href="/index.html" class="footer__logo"><img src="/public/icon/logo-footer.svg" alt="Logo exposition Shigeru Ban"></a>
+    <a href="/fr/index.html" class="footer__logo"><img src="/public/icon/logo-footer.svg" alt="Logo exposition Shigeru Ban"></a>
 </footer>
 </body>
 </html>
