modification du btn billetterie

--- a/fr/index.html
+++ b/fr/index.html
@@ -142,7 +142,7 @@
         <article class="billetterie-acceuil">
             <h3 class="billetterie__titre" >Vous voulez en savoir plus sur comment cet arcitecte révolutionne le monde ? </h3>
             <p class="billetterie__texte">L’exposition est ouverte tout le jours du 13 Avril au 23 Juin 2024</p>
-            <button  href="/fr/billetterie.html" class="Btn-billetterie"> BILLETTERIE </button>
+            <a  href="/fr/billetterie.html" class="Btn-billetterie"> BILLETTERIE </a>
             <br>
             <cite class="citation">Cette exposition sur Shigeru Ban offre une plongée unique dans l'innovation architecturale et la durabilité. Découvrez comment chaque structure raconte une histoire captivante où créativité et responsabilité environnementale convergent.</cite>
         </article>
