encore modifications des liens

--- a/fr/billetterie.html
+++ b/fr/billetterie.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/index.html">
+        <a href="/fr/index.html">
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
         </a>
         <a class="dropbtn">
@@ -26,7 +26,7 @@
           class="menu"
         >
 
-        <a href="/index.html"  >
+        <a href="/fr/index.html"  >
             <img src="/public/icon/logo-footer.svg" alt="Logo Shigeru Ban" class="logo-menu">
         </a>
 
