--- a/fr/Oeuvres.html
+++ b/fr/Oeuvres.html
@@ -27,7 +27,7 @@
           class="menu"
         >
 
-        <a href="/index.html"  >
+        <a href="/fr/index.html"  >
             <img src="/public/icon/logo-footer.svg" alt="Logo Shigeru Ban" class="logo-menu">
         </a>
 
