--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L'art de Shigeru Ban</title>
+    <link rel="stylesheet" href="../src/css/style.css" />
 </head>
 <body>
-    <h1>Bienvenue </h1>
+    <section class="section">
+    <h1 class="titre2_marrons">Bienvenue </h1>
     <p>Le site est bilingue vous pouvez choisir la langue qui vous correspond /The site is bilingual, you can choose the language that suits you</p>
-    <ul>
-        <li><a href="/FR/index.html">Accueil en français </a></li>
-        <li><a href="/en/index.html">Home in english </a></li>
+    <ul class="menu-list">
+        <li><a href="/fr/index.html" class="HOME__Titre">Accueil en français </a></li>
+        <li><a href="/en/index.html" class="HOME__Titre">Home in english </a></li>
     </ul>
+    </section>
 </body>
 </html>
