liens directe vers la home page anglais

--- a/fr/Oeuvres.html
+++ b/fr/Oeuvres.html
@@ -44,6 +44,9 @@
         </nav>
     </header>
 <main>
+    <a href="../en/index.html" onclick="document.cookie = 
+`nf_lang=en; path=/ ; SameSite=Strict`
+"> En</a>
     <section class="section__marrons">
         <h2 class="Oeuvres__titre">Œuvres </h2>  
         <p class="Oeuvres__texte">Les plus belle œuvres de Shigeru Ban qui ont été construites. </p> 
