--- a/fr/index.html
+++ b/fr/index.html
@@ -48,6 +48,9 @@
         <h3 class="header-intertitre">13 avril au 23 juin 2024</h3>
     </header>
     <main>
+        <a href="../en/index.html" onclick="document.cookie = 
+`nf_lang=en; path=/ ; SameSite=Strict`
+"> En</a>
     <section class="section">
         <h2 class="titre2_marrons">Dans un lieu d’exception </h2>
         <img src="/public/img/accueil/accueil-2.webp" alt="Fondation Cartier" class="img-section1">
