--- a/fr/cathedral.html
+++ b/fr/cathedral.html
@@ -43,6 +43,9 @@
         </nav>
     </header>
 <main>
+    <a href="../en/index.html" onclick="document.cookie = 
+`nf_lang=en; path=/ ; SameSite=Strict`
+"> En</a>
     <section class="section">
         <a  href="https://shigerubanarchitects.com/works/cultural/cardboard-cathedral/" class="Batiment__Titre"> <strong>Cardboard Cathedral</strong></a>
         <article>
