--- a/fr/maroc.html
+++ b/fr/maroc.html
@@ -8,6 +8,9 @@
     <script defer="" src="https://unpkg.com/alpinejs@3.4.2/dist/cdn.min.js"></script>
 </head>
 <body>
+    <a href="../en/index.html" onclick="document.cookie = 
+`nf_lang=en; path=/ ; SameSite=Strict`
+"> En</a>
     <header class="header">
         <a href="/fr/index.html">
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
