--- a/fr/simose.html
+++ b/fr/simose.html
@@ -43,6 +43,9 @@
         </nav>
     </header>
 <main>
+    <a href="../en/index.html" onclick="document.cookie = 
+`nf_lang=en; path=/ ; SameSite=Strict`
+"> En</a>
     <section class="section">
         <a  href="https://shigerubanarchitects.com/works/cultural/simose/" class="Batiment__Titre"> <strong> Simose</strong></a>
         <article>
