--- a/fr/suiden.html
+++ b/fr/suiden.html
@@ -43,6 +43,9 @@
         </nav>
     </header>
 <main>
+    <a href="../en/index.html" onclick="document.cookie = 
+`nf_lang=en; path=/ ; SameSite=Strict`
+"> En</a>
     <section class="section">
         <a  href="https://shigerubanarchitects.com/works/cultural/shonai-hotel-suiden-terrasse-spa/" class="Batiment__Titre"> <strong>Shonai hotel Suiden terrasse spa </strong></a>
         <article>
