stule css de la redirection

--- a/fr/maison.html
+++ b/fr/maison.html
@@ -45,7 +45,9 @@
 <main>
     <a href="../en/index.html" onclick="document.cookie = 
 `nf_lang=en; path=/ ; SameSite=Strict`
-"> En</a>
+"
+class="redirection"
+> En</a>
     <section class="section">
         <a  href="https://shigerubanarchitects.com/works/hh/crescent-house/" class="Batiment__Titre"> <strong>Crescent House</strong></a>
         <article>
