--- a/fr/népal.html
+++ b/fr/népal.html
@@ -45,7 +45,9 @@
 <main>
     <a href="../en/index.html" onclick="document.cookie = 
 `nf_lang=en; path=/ ; SameSite=Strict`
-"> En</a>
+"
+class="redirection"
+> En</a>
     <section class="section">
         <a  href="https://shigerubanarchitects.com/works/timber-and-bamboo/khumjung-secondary-school/" class="Batiment__Titre"> <strong> Khumjung secondary school</strong></a>
         <article>
