--- a/fr/shigeru-Ban.html
+++ b/fr/shigeru-Ban.html
@@ -45,7 +45,9 @@
 <main>
     <a href="../en/index.html" onclick="document.cookie = 
 `nf_lang=en; path=/ ; SameSite=Strict`
-"> En</a>
+"
+class="redirection"
+> En</a>
     <section class="section">
         <h2 class="Ban__Titre">Shigeru Ban</h2>
         <img class="Ban__img" src="/public/img/shigeruBan.webp" alt="photo de shigeru Ban">
