--- a/fr/Oeuvres.html
+++ b/fr/Oeuvres.html
@@ -46,7 +46,9 @@
 <main>
     <a href="../en/index.html" onclick="document.cookie = 
 `nf_lang=en; path=/ ; SameSite=Strict`
-"> En</a>
+"
+class="redirection"
+> En</a>
     <section class="section__marrons">
         <h2 class="Oeuvres__titre">Œuvres </h2>  
         <p class="Oeuvres__texte">Les plus belle œuvres de Shigeru Ban qui ont été construites. </p> 
