--- a/fr/Ponpidou.html
+++ b/fr/Ponpidou.html
@@ -45,7 +45,9 @@
 <main>
     <a href="../en/index.html" onclick="document.cookie = 
 `nf_lang=en; path=/ ; SameSite=Strict`
-"> En</a>
+"
+class="redirection"
+> En</a>
     <section class="section">
         <a  href="https://shigerubanarchitects.com/works/cultural/centre-pompidou-metz/" class="Batiment__Titre"> <strong> Centre Ponpidou Metz</strong></a>
         <article>
