--- a/fr/billetterie.html
+++ b/fr/billetterie.html
@@ -46,7 +46,9 @@
     <main>
         <a href="../en/index.html" onclick="document.cookie = 
 `nf_lang=en; path=/ ; SameSite=Strict`
-"> En</a>
+"
+class="redirection"
+> En</a>
     <section class="section__marrons">
         <h2 class="title__billetterie">Prenez votre ticket directement en ligne </h2>
     </section>    
