--- a/fr/hotel.html
+++ b/fr/hotel.html
@@ -45,7 +45,9 @@
 <main>
     <a href="../en/index.html" onclick="document.cookie = 
 `nf_lang=en; path=/ ; SameSite=Strict`
-"> En</a>
+"
+class="redirection"
+> En</a>
     <section class="section">
         <a  href="https://shigerubanarchitects.com/works/cultural/zen-wellness-seinei/" class="Batiment__Titre"> <strong> ZEN Wellness SEINEI</strong></a>
         <article>
