--- a/fr/index.html
+++ b/fr/index.html
@@ -50,7 +50,9 @@
     <main>
         <a href="../en/index.html" onclick="document.cookie = 
 `nf_lang=en; path=/ ; SameSite=Strict`
-"> En</a>
+"
+class="redirection"
+> En</a>
     <section class="section">
         <h2 class="titre2_marrons">Dans un lieu d’exception </h2>
         <img src="/public/img/accueil/accueil-2.webp" alt="Fondation Cartier" class="img-section1">
