--- a/fr/infos.html
+++ b/fr/infos.html
@@ -45,7 +45,9 @@
     <main>
       <a href="../en/index.html" onclick="document.cookie = 
 `nf_lang=en; path=/ ; SameSite=Strict`
-"> En</a>
+"
+class="redirection"
+> En</a>
       <section class="section__marrons">
         <h1 class="infos__titre">Infos</h1>
     <div id="onglets" x-data="{
