--- a/fr/maroc.html
+++ b/fr/maroc.html
@@ -10,7 +10,9 @@
 <body>
     <a href="../en/index.html" onclick="document.cookie = 
 `nf_lang=en; path=/ ; SameSite=Strict`
-"> En</a>
+"
+class="redirection"
+> En</a>
     <header class="header">
         <a href="/fr/index.html">
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
