--- a/en/index.html
+++ b/en/index.html
@@ -48,6 +48,11 @@
         <h3 class="header-intertitre">April 13 to June 23, 2024</h3>
     </header>
     <main>
+        <a href="../fr/index.html" onclick="document.cookie = 
+`nf_lang=fr; path=/ ; SameSite=Strict`
+"
+class="redirection"
+> Fr</a>
     <section class="section">
         <h2 class="titre2_marrons">In an exceptional place</h2>
         <img src="/public/img/accueil/accueil-2.webp" alt="Fondation Cartier" class="img-section1">
